tests/e2e/sample-applications/virt-todo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vm-service
  namespace: openshift-virtualization-os-images
spec:
  selector:
    special: key 
  ports:
    - name: todoport
      port: 8000
      targetPort: 8000 
  type: NodePort
