tests/e2e/sample-applications/virt-todo/vmroute.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: vmroute
  namespace: virttodo
spec:
  #host: vmroute-openshift-virtualization-os-images.apps.cluster-wdh03122024metala.wdh03122024metala.mg.dog8code.com
  port:
    targetPort: todoport
  to:
    kind: Service
    name: vm-service
    weight: 100
  wildcardPolicy: None
